<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ejercicio4"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/areaCirculo"
            android:layout_marginTop="10dp"
            android:gravity="center" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginVertical="20dp"
            app:srcCompat="@drawable/circulo" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginVertical="5dp"
            app:srcCompat="@drawable/area_circulo" />

        <EditText
            android:id="@+id/editRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/radio"
            android:inputType="number" />

        <Button
            android:id="@+id/btnCirculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:onClick="onClick"
            android:text="@string/area" />

        <TextView
            android:id="@+id/resultadoCirculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:textColor="@color/black"
            android:layout_marginHorizontal="20dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/areaRectangulo"
            android:layout_marginTop="10dp"
            android:gravity="center" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginVertical="20dp"
            app:srcCompat="@drawable/rectangulo" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginVertical="5dp"
            app:srcCompat="@drawable/area_rectangulo" />

        <EditText
            android:id="@+id/editBaseRectangulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/base"
            android:inputType="number" />

        <EditText
            android:id="@+id/editAlturaRectangulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/altura"
            android:inputType="number" />

        <TextView
            android:id="@+id/resultadoRectangulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:textColor="@color/black"
            android:layout_marginHorizontal="20dp"
            />

        <Button
            android:id="@+id/btnRectangulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:onClick="onClick"
            android:text="@string/area" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/areaTriangulo"
            android:layout_marginTop="10dp"
            android:gravity="center" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginVertical="20dp"
            app:srcCompat="@drawable/triangulo" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginVertical="5dp"
            app:srcCompat="@drawable/area_triangulo" />

        <EditText
            android:id="@+id/editBaseTriangulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/base"
            android:inputType="number" />

        <EditText
            android:id="@+id/editAlturaTriangulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/altura"
            android:inputType="number" />

        <Button
            android:id="@+id/btnTriangulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="70dp"
            android:onClick="onClick"
            android:text="@string/area" />

        <TextView
            android:id="@+id/resultadoTriangulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:textColor="@color/black"
            android:layout_marginHorizontal="20dp"
            />

    </LinearLayout>
</ScrollView>